--- a/x86_64/Dockerfile-aria2
+++ b/x86_64/Dockerfile-aria2
@@ -1,6 +1,6 @@
 FROM alpine:edge
 
-LABEL AUTHOR=AnRightHand
+LABEL AUTHOR=aymtools
 
 ENV ARCH=64bit
 ENV ARIA2_VERSION=1.35.0
@@ -21,7 +21,7 @@ EXPOSE 6800 6881-6999/udp
 
 #CMD /app/aria2c --conf-path=/config/aria2.conf
 
-RUN curl -sSL -o /app/aria2.conf https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/aria2/aria2.conf && \
-  curl -sSL -o /app/run.sh https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/aria2/run.sh && chmod +x /app/run.sh
+RUN curl -sSL -o /app/aria2.conf https://raw.githubusercontent.com/aymtools/rpi-dockers/master/aria2/aria2.conf && \
+  curl -sSL -o /app/run.sh https://raw.githubusercontent.com/aymtools/rpi-dockers/master/aria2/run.sh && chmod +x /app/run.sh
 
 CMD /app/run.sh
