--- a/x86_64/Dockerfile-caddy
+++ b/x86_64/Dockerfile-caddy
@@ -1,6 +1,6 @@
 FROM alpine:edge
 
-LABEL AUTHOR=AnRightHand
+LABEL AUTHOR=aymtools
 
 RUN apk add curl bash \
         && curl https://getcaddy.com | bash -s personal http.webdav 
@@ -9,7 +9,7 @@ EXPOSE 80 443
 
 #CMD [ "caddy","-conf","/config/Caddyfile" ]
 
-RUN mkdir -p /app && curl -sSL -o /app/Caddyfile https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/caddy/Caddyfile && \
-  curl -sSL -o /app/run.sh https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/caddy/run.sh && chmod +x /app/run.sh
+RUN mkdir -p /app && curl -sSL -o /app/Caddyfile https://raw.githubusercontent.com/aymtools/rpi-dockers/master/caddy/Caddyfile && \
+  curl -sSL -o /app/run.sh https://raw.githubusercontent.com/aymtools/rpi-dockers/master/caddy/run.sh && chmod +x /app/run.sh
 
 CMD /app/run.sh
