--- a/x86_64/Dockerfile-filebrowser
+++ b/x86_64/Dockerfile-filebrowser
@@ -1,6 +1,6 @@
 FROM alpine:edge
 
-LABEL AUTHOR=AnRightHand
+LABEL AUTHOR=aymtools
 
 ENV ARCH=amd64
 ENV FILE_BROWSER_VERSION=v2.0.16
@@ -17,7 +17,7 @@ EXPOSE 80 443
 
 #CMD /app/filebrowser --config /config/filebrowser.json
 
-RUN curl -sSL -o /app/filebrowser.json https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/filebrowser/filebrowser.json && \
-  curl -sSL -o /app/run.sh https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/filebrowser/run.sh && chmod +x /app/run.sh
+RUN curl -sSL -o /app/filebrowser.json https://raw.githubusercontent.com/aymtools/rpi-dockers/master/filebrowser/filebrowser.json && \
+  curl -sSL -o /app/run.sh https://raw.githubusercontent.com/aymtools/rpi-dockers/master/filebrowser/run.sh && chmod +x /app/run.sh
 
 CMD /app/run.sh
