--- a/x86_64/Dockerfile-minidlna
+++ b/x86_64/Dockerfile-minidlna
@@ -1,6 +1,6 @@
 FROM alpine:edge
 
-LABEL AUTHOR=AnRightHand
+LABEL AUTHOR=aymtools
 
 # install minidlna
 RUN apk --no-cache add minidlna curl
@@ -12,7 +12,7 @@ VOLUME /config
 
 #CMD /usr/sbin/minidlnad -f /config/minidlna.conf -S
 
-RUN mkdir -p /app && curl -sSL -o /app/minidlna.conf https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/minidlna/minidlna.conf && \ 
-  curl -sSL -o /app/run.sh https://raw.githubusercontent.com/AnRightHand/rpi-dockers/master/minidlna/run.sh && chmod +x /app/run.sh
+RUN mkdir -p /app && curl -sSL -o /app/minidlna.conf https://raw.githubusercontent.com/aymtools/rpi-dockers/master/minidlna/minidlna.conf && \ 
+  curl -sSL -o /app/run.sh https://raw.githubusercontent.com/aymtools/rpi-dockers/master/minidlna/run.sh && chmod +x /app/run.sh
 
 CMD /app/run.sh
